**  denotes quite substantial/important changes
*** denotes really big changes 

Currently deprecated and liable to be removed: 
- single penalty tensor product smooths.
- p.type!=0 in summary.gam.

1.8-18

* plot.gam fix to handling of plot limits when using 'trans' (from 1.8-16 
  'trans' could be applied twice). 

* bam(...,discrete=TRUE) could fail if NAs in the smooth terms caused data rows
  to be dropped which led to parametric term factors having unused levels 
  (which were then not being dropped). Fixed (in discrete.mf). 

* bam(...,discrete=TRUE,nthreads=n) now warns if n>1 and openMP is not 
  available on the platform being used. 

* Sl.addS modified to use C code for some otherwise very slow matrix 
  subset and addition ops which could become rate limiting for 
  bam(...,discrete=TRUE). 
   
* 'gamm' now warns if called with extended families.

* disasterous 'te' in place of 'ti' typo in ?smooth.terms fixed thanks to 
  John McKinlay.

* Some `internal' functions exported to facilitate quantile gam methods 
  in separate package.

* Minor fix in gam.fit5 - 1 by 1 matrix coerced to scalar, to prevent failure 
  in some circumstances. 

1.8-17

* Export gamlss.etamu, gamlss.gH and trind.generator to facilitate user 
  addition of new location-scale families. 

* Re-ordering of initialization in gam.fit4 to avoid possible failure of
  dev.resids call before initialization. 

* trap in fast.REML.fit for situation in which all smoothing parameters 
  satisfy conditions for indefinite convergence on entry, with an 
  immediate warning that this probably indicates iteration divergence (of bam).

* "bs" basis modified to allow easier control of the interval over which the
  spline penalty applies which in turn allows more sensible control of 
  extrapolation behaviour, when this is unavoidable. 

* Fix in uniquecombs - revised faster code (from 1.8-13) could occasionally 
  generate false matches between different input combinations for integer 